tests/errors/surf_num_08.experr
cannot convert Float NaN to Integer
